# grift

./: README.md  pyproject.toml
gryft/: __init__.py  image.py  scanning.py  snapshot.py  types.py
gryft/analysis/: competitive.py  experiment.py  pandas.py  plot.py
gryft/scanning/: __init__.py  image.py  report.py  scanner.py  snapshot.py  types.py
